# command-line-rust

./: .env  Dockerfile  compose.yaml
.devcontainer/: devcontainer.json
01_hello/: Cargo.toml
01_hello/src/: lib.rs  lib_a.rs  main.rs
01_hello/src/lib_a/: lib_a_fuga.rs  lib_a_hoge.rs
01_hello/tests/: fuga.rs  hoge.rs
02_1_echor/: Cargo.toml
02_1_echor/src/: main.rs
02_echor/: Cargo.toml
03_catr/src/: lib.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs
04_headr/tests/: cli.rs
05_wcr/: Cargo.toml
05_wcr/src/: lib.rs
05_wcr/tests/: cli.rs
05_wcr/tests/expected/: all.c.out  all.lwm.out  all.ml.out  all.w.out  all.wl.out  all.wm.out  atlamal.txt.lwm.out  atlamal.txt.stdin.out  atlamal.txt.w.out  atlamal.txt.wc.out  atlamal.txt.wl.out
06_uniqr/: Cargo.toml
06_uniqr/src/: lib.rs
07_findr/: Cargo.toml
07_findr/src/: lib.rs
08_cutr/: Cargo.toml
08_cutr/src/: lib.rs
