[package]
name = "headr"
version = "0.1.0"
edition = "2021"
authors = ["John Doe"]
description = "Rust head"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
